force-app/main/default/objects/LicenseName__c/LicenseName__c.object-meta.xml
<CustomObject>
    <description>PacPoint-FT041820- Created for PVL phase 1</description>
    <label>License Name</label>
    <nameField>
        <displayFormat>LN-{0000}</displayFormat>
        <label>License Name Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>License Names</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>