force-app/main/default/objects/LicenseName__c/fields/HistoryTradeProfessionalName__c.field-meta.xml
<CustomField>
    <fullName>HistoryTradeProfessionalName__c</fullName>
    <formula>License__r.HistoryTradeProfessionalName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>History Trade/Professional Name</label>
    <type>Checkbox</type>
</CustomField>