force-app/main/default/objects/LicenseName__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>PacPoint-FT041820- Created for PVL phase 1</description>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>