force-app/main/default/objects/LicenseName__c/fields/NameForSearch__c.field-meta.xml
<CustomField>
    <fullName>NameForSearch__c</fullName>
    <description>Used to escape the special character of the Name</description>
    <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Name__c, &apos;\&apos;&apos;, &apos;&apos;), &apos;-&apos;, &apos;&apos;), &apos; &apos;,&apos;&apos;)</formula>
    <label>Name For Search</label>
    <type>Text</type>
</CustomField>