force-app/main/default/objects/LicenseName__c/fields/NameType__c.field-meta.xml
<CustomField>
    <fullName>NameType__c</fullName>
    <description>PacPoint-FT041820- Created for PVL phase 1</description>
    <label>Name Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A - Aliases</fullName>
            </value>
            <value>
                <fullName>B - Branch Office Name</fullName>
            </value>
            <value>
                <fullName>C - Classroom Location Name</fullName>
            </value>
            <value>
                <fullName>J - Joint Venture</fullName>
            </value>
            <value>
                <fullName>L - Legal Name (Married/Maiden)</fullName>
            </value>
            <value>
                <fullName>M - Main Office Name</fullName>
            </value>
            <value>
                <fullName>N - Name at Birth</fullName>
            </value>
            <value>
                <fullName>O - General Office Name</fullName>
            </value>
            <value>
                <fullName>P - Professional Name</fullName>
            </value>
            <value>
                <fullName>S - Site Office Name</fullName>
            </value>
            <value>
                <fullName>T - Trade Name</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>