force-app/main/default/objects/LicenseName__c/listViews/All_License_Names.listView-meta.xml
<ListView>
    <fullName>All_License_Names</fullName>
    <columns>License__c</columns>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>HistoryTradeProfessionalName__c</columns>
    <columns>NameType__c</columns>
    <columns>EffectiveDate__c</columns>
    <columns>TermDate__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All License Names</label>
</ListView>